--- a/Week7-PhyloCom/PhyloCom_assignment.Rmd
+++ b/Week7-PhyloCom/PhyloCom_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Phylogenetic Diversity - Communities"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Savannah Bennett; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -41,14 +41,8 @@ In the R code chunk below, provide the code to:
 5. load the required R source file.
 
 ```{r}
-
-
-
-
-
-
-
-
+rm(list = ls())
+getwd()
 
 
 ```
@@ -70,13 +64,43 @@ In the R code chunk below, do the following:
 6. load the taxonomic data using the `read.tax()` function from the source-code file.
 
 ```{r}
+install.packages(package.list)
+
+#Install Packages
+package.list <- c('picante', 'ape', 'seqinr', 'vegan', 'fossil', 'simba')
+for (package in package.list) {
+  if (!require(package, character.only = TRUE, quietly = TRUE)) {
+    install.packages(package, repos ='https://cran.us.r-project.org')
+    library(package, character.only = TRUE)
+  }
+}
+
+#Load source code
+source("./bin/MothurTools.R")
+
+#Load and process data
+env <- read.table("data/20130801_PondDataMod.csv", sep = ",", header = TRUE)
+env <- na.omit(env)
 
 
+#Load site-by-species matrix
+comm <- read.otu(shared = "./data/INPonds.final.rdp.shared", cutoff = "1")
 
+#Select DNA using 'grep()'
+comm <- comm[grep("*DNA", rownames(comm)), ]
 
+#Perform replacement of all matches with 'gsub()'
+rownames(comm) <- gsub("\\-DNA", "", rownames(comm))
+rownames(comm) <- gsub("\\_", "", rownames(comm))
 
+#Remove sites not in the environmental data set
+comm <- comm[rownames(comm) %in% env$Sample_ID, ]
 
+#Remove zero-abundance OTUs from data set
+comm <- comm[ , colSums(comm) > 0]
 
+#Import taxonomic data with 'read.tax()' function
+tax <- read.tax(taxonomy = "./data/INPonds.final.rdp.1.cons.taxonomy")
 ```
 
 Next, in the R code chunk below, do the following:  
@@ -91,14 +115,41 @@ Next, in the R code chunk below, do the following:
 9. plot the rooted tree.
 
 ```{r}
+#Import the alignment file ('sequinr')
+ponds.cons <- read.alignment(file = "./data/INPonds.final.rdp.1.rep.fasta",
+                             format = "fasta")
 
+#Rename OTUs in the FASTA file
+ponds.cons$nam <- gsub("\\|.*$", "", gsub("^.*?\t", "", ponds.cons$nam))
 
+#Import outgroup sequence
+outgroup <- read.alignment(file = "./data/methanosarcina.fasta", format = "fasta")
 
+#Convert alignment file to DNAbin
+DNAbin <- rbind(as.DNAbin(outgroup), as.DNAbin(ponds.cons))
 
+#Visualize alignment
+image.DNAbin(DNAbin, show.labels=T, cex.lab = 0.05, las = 1)
 
+#Make distance matrix ('ape')
+seq.dist.jc <- dist.dna(DNAbin, model = "JC", pairwise.deletion = FALSE)
 
+#Make a neighbor-joining tree file ('ape')
+phy.all <- bionj(seq.dist.jc)
 
+#Drop tips of zero occurence OTUs ('ape')
+phy <- drop.tip(phy.all, phy.all$tip.label[!phy.all$tip.label %in%
+                                             c(colnames(comm), "Methanosarcina")])
 
+#Identify outgroup sequence
+outgroup <- match("Methanosarcina", phy$tip.label)
+
+#Root the tree {ape}
+phy <- root(phy, outgroup, resolve.root = TRUE)
+
+#Plot the rooted tree {ape}
+par(mar = c(1, 1, 2, 1) + 0.1)
+plot.phylo(phy, main = "Neighbor Joining Tree", "phylogram", show.tip.label = FALSE, use.edge.length = FALSE, direction = "right", cex = 0.6, label.offset = 1)
 
 ```
 
@@ -109,8 +160,8 @@ In the R code chunk below, do the following:
 1. calculate Faith's D using the `pd()` function.
 
 ```{r}
-
-
+#Calculate PD and S {picante}
+pd <- pd(comm, phy, include.root = FALSE)
 ```
 
 In the R code chunk below, do the following:  
@@ -119,10 +170,20 @@ In the R code chunk below, do the following:
 3. calculate the scaling exponent. 
 
 ```{r}
+#Biplot of S and PD
+par(mar = c(5, 5, 4, 1) + 0.1)
 
+plot(log(pd$S), log(pd$PD),
+     pch = 20, col = "red", las = 1,
+     xlab = "ln(S)", ylab = "ln(PD)", cex.main = 1,
+     main="Phylodiversity (PD) vs. Taxonomic Richness (S)")
 
-
-
+#Test of power-law relationship
+fit <- lm('log(pd$PD) ~ log(pd$S)')
+abline(fit, col= "red", lw = 2)
+exponent <- round(coefficients(fit)[2], 2)
+legend("topleft", legend = paste("Scaling exponent = ", exponent, sep = ""),
+       bty = "n", lw = 2, col = "red")
 
 ```
 
@@ -143,10 +204,9 @@ In the R code chunk below, do the following:
 1. estimate the standardized effect size of PD using the `richness` randomization method.  
 
 ```{r}
-
-
-
-
+#Estimate standardized effect size fo PD via randomization ('picante')
+ses.pd <- ses.pd(comm[1:2,], phy, null.model = "richness", runs = 25,
+                 include.root = FALSE)
 ```
 
 ***Question 2***: Using `help()` and the table above, run the `ses.pd()` function using two other null models and answer the following questions:
@@ -166,7 +226,8 @@ In the R code chunk below, do the following:
 1. calculate the phylogenetic resemblance matrix for taxa in the Indiana ponds data set.
 
 ```{r}
-
+#Create phylogenetic resemblance matrix
+phydist <- cophenetic.phylo(phy)
 
 ```
 
@@ -176,12 +237,14 @@ In the R code chunk below, do the following:
 1. Calculate the NRI for each site in the Indiana ponds data set. 
 
 ```{r}
+#Estimate standardized effect size of NRI via randomization ('picante')
+ses.mpd <- ses.mpd(comm, phydist, null.model = "taxa.labels", 
+                   abundance.weighted = FALSE, runs = 25)
 
-
-
-
-
-
+#Calculate NRI
+NRI <- as.matrix(-1 * ((ses.mpd[,2] - ses.mpd[,3]) / ses.mpd[,4]))
+rownames(NRI) <- row.names(ses.mpd)
+colnames(NRI) <- "NRI"
 ```
 
 **iii.  Nearest Taxon Index (NTI)**
@@ -190,9 +253,14 @@ In the R code chunk below, do the following:
 1. Calculate the NTI for each site in the Indiana ponds data set. 
 
 ```{r}
+#Estimate standardized effect size of NRI via randomization {picante}
+ses.mntd <- ses.mntd(comm, phydist, null.model = "taxa.labels",
+                     abundance.weighted = FALSE, runs = 25)
 
-
-
+#Calcualte NTI
+NTI <- as.matrix(-1 * ((ses.mntd[,2] - ses.mntd[,3]) / ses.mntd[,4]))
+rownames(NTI) <- row.names(ses.mntd)
+colnames(NTI) <- "NTI"
 ```
 
 ***Question 3***: 
@@ -217,9 +285,18 @@ In the R code chunk below, do the following:
 2. calculate the phylogenetically based community resemblance matrix using UniFrac distance.
 
 ```{r}
+#Mean pairwise distance
+dist.mp <- comdist(comm, phydist)
 
+#UniFrac distance 
+dist.uf <- unifrac(comm, phy)
 
-
+par(mar = c(5, 5, 2, 1) + 0.1)
+plot(dist.mp, dist.uf,
+     pch = 20, col = "red", las = 1, asp = 1, xlim = c(0.15, 0.5), ylim = c(0.15, 0.5),
+     xlab = "Mean Pair Distance", ylab = "UniFrac Distance")
+abline(b = 1, a = 0, lty = 2)
+text(0.5, 0.47, "1:1")
 
 ```
 
@@ -255,10 +332,15 @@ In the R code chunk below, do the following:
 2. calculate the explained variation for the first three PCoA axes.
 
 ```{r}
+pond.pcoa <- cmdscale(dist.uf, eig = T, k = 3)
 
+explainvar1 <- round(pond.pcoa$eig[1] / sum(pond.pcoa$eig), 3) * 100
+explainvar2 <- round(pond.pcoa$eig[2] / sum(pond.pcoa$eig), 3) * 100
+explainvar3 <- round(pond.pcoa$eig[3] / sum(pond.pcoa$eig), 3) * 100
+sum.eig <- sum(explainvar1, explainvar2, explainvar3)
 
-
-
+#Define plot parameters 
+par(mar = c(5, 5, 1, 2) + 0.1)
 
 
 ```
@@ -272,23 +354,35 @@ In the R code chunk below, do the following:
 4. customize the plot. 
 
 ```{r}
+#Initiate plot
+plot(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2],
+     xlim = c(-0.2, 0.2), ylim = c(-0.16, 0.16),
+     xlab = paste("PCoA 1 (", explainvar1, "%)", sep = ""),
+     ylab = paste("PCoA 2 (", explainvar2, "%)", sep = ""),
+      pch = 16, cex = 2.0, type = "n", cex.lab = 1.5, cex.axis = 1.2, axes = FALSE)
 
+#Add axes
+axis(side = 1, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1)
+axis(side = 2, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1)
+abline(h = 0, v = 0, lty = 3)
+box(lwd = 2)
 
-
-
-
-
-
-
-
-
-
-
+#Add points and labels
+points(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2],
+       pch = 10, cex = 3, bg = "gray", col = "gray")
+text(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2],
+     labels = row.names(pond.pcoa$points))
 ```
 
 In the following R code chunk:
 1. perform another PCoA on taxonomic data using an appropriate measure of dissimilarity, and
 2. calculate the explained variation on the first three PCoA axes. 
+
+```{r}
+
+
+```
+
 
 ***Question 5***: Using a combination of visualization tools and percent variation explained, how does the phylogenetically based ordination compare or contrast with the taxonomic ordination? What does this tell you about the importance of phylogenetic information in this system?
 
